Fix alignment for wider screens

--- a/src/components/settings/position.scss
+++ b/src/components/settings/position.scss
@@ -1,10 +1,8 @@
 @mixin settings-menu-container {
   max-width: 800px;
   height: 100%;
-  margin-left: 10%;
 
   display: flex;
   flex-direction: column;
-  padding: 0 2rem;
   line-height: 1;
 }
